--- a/RubberDuck/styles.css
+++ b/RubberDuck/styles.css
@@ -1,10 +1,10 @@
 body {
   font-family: Helvetica;
-  background-color: rgb(98, 98, 172);
+  background-color: rgb(224, 254, 254);
 }
 a {
   text-decoration: none;
-  color: #000;
+  color: #000000;
 }
 .site-header { 
   border-bottom: 1px solid #ccc;
@@ -19,17 +19,17 @@ a {
   display: inline-block;
 }
 
-button{
-  background-color: aqua;
-  border-color: blue;
+button, #button{
+  background-color: rgb(186, 238, 238);
+  border-color: rgb(96, 199, 211);
   cursor: pointer;
   border-radius: 10px;
   margin: 10px;
 }
 
 #newProblem, select{
-  background-color: aquamarine;
-  border-color: aqua;
+  background-color: rgb(187, 240, 222);
+  border-color: rgb(180, 226, 226);
   border-radius: 30px;
   margin: 10px;
 }
@@ -39,10 +39,11 @@ img {
   height: 70px;
   margin-top: 5px;
   margin-left: 10px;
+  border-radius: 1000px;
 }
 
 .hidden{
-display: none;
+display: none !important;
 }
 
 .visible{
@@ -50,15 +51,119 @@ display: block;
 }
 
 #praiseContainer, #problemContainer{
-  width: 70%;
+  width: 30%;
   height: 100%;
   border-radius: 30px;
-  background: rgb(90, 95, 141);
-  box-shadow: 15px 15px 30px rgb(25, 25, 25),
-              -15px -15px 30px rgb(60, 60, 60);
+  background: rgb(205, 239, 236);
+  box-shadow: 15px 15px 15px rgb(216, 237, 246),
+              -5px -5px 15px rgb(209, 234, 238);
   margin:5%
 }
 
 #praiseList, #problemList {
   padding-bottom: 5%;
+}
+
+#greeting{
+  border-radius: 10px;
+  position: absolute;
+  right: 5%;
+}
+
+.container{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start
+    }
+
+.buttonContainer{
+  position: absolute;
+  right: 5%;
+  top: 10%
+}
+
+#error{
+  color: rgb(126, 28, 28);
+}
+
+
+/*Duck*/
+/* Loading container */
+.loading-duck {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+/* Duck animation */
+.duck {
+  width: 50px;
+  height: 50px;
+  background-image: url('./Pictures/RubberDuck.jpg');
+  background-size: cover;
+  background-position: center;
+  animation: swim 1.5s infinite linear;
+}
+
+/* Duck movement */
+@keyframes swim {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(20px) translateY(-10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+
+#form{
+  display: inline-block;
+  text-align: center;
+  padding: 5%;
+}
+
+#name, #email, #password{
+  padding: 5%;
+  margin: 5%;
+  border-radius: 10px;
+}
+
+/* Talking bubble */
+p {
+	position: relative;
+	max-width: 30em;
+  margin-left: 2%;
+	
+	background-color: #fff;
+	padding: 1.125em 1.5em;
+	font-size: 1.25em;
+	border-radius: 1rem;
+  box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
+}
+
+p::before {
+	content: '';
+	position: absolute;
+	width: 0;
+	height: 0;
+	bottom: 100%;
+	left: 1.5em;
+	border: .75rem solid transparent;
+	border-top: none;
+
+	border-bottom-color: #fff;
+	filter: drop-shadow(0 -0.0625rem 0.0625rem rgba(0, 0, 0, .1));
+}
+
+html {
+	font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+	line-height: 1.5;
+	font-weight: 300;
+	color: #192229;
+	background: linear-gradient(135deg, #F4F2F3, #BFC6D0);
 }
